--- a/ChocolateyExplorer.WPF/MainWindow.xaml
+++ b/ChocolateyExplorer.WPF/MainWindow.xaml
@@ -3,8 +3,19 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:Views="clr-namespace:ChocolateyExplorer.WPF.Views" x:Class="ChocolateyExplorer.WPF.MainWindow"
         Title="Chocolatey Explorer" MinWidth="800" MinHeight="600" WindowState="Maximized">
+    
     <DockPanel LastChildFill="true">
-        <Views:Sources />
-        <Views:Packages />
+        <TabControl>
+            <TabItem Header="Remote Packages" UseLayoutRounding="False">
+                <DockPanel LastChildFill="true">
+                    <Views:Sources />
+                    <Views:Packages />
+                </DockPanel>
+            </TabItem>
+            <TabItem Header="Installed Packages">
+                <Views:InstalledPackages />
+            </TabItem>
+        </TabControl>
     </DockPanel>
+    
 </Window>
