--- a/ChocolateyExplorer.WPF/Views/InstalledPackages.xaml
+++ b/ChocolateyExplorer.WPF/Views/InstalledPackages.xaml
@@ -5,7 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" 
              d:DesignHeight="600" d:DesignWidth="800"
-             DataContext="{Binding Source={StaticResource Locator}, Path=InstalledPackages}" Loaded="UserControl_Loaded">
+             DataContext="{Binding Source={StaticResource Locator}, Path=InstalledPackages}">
     <UserControl.Resources>
         <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
     </UserControl.Resources>
