--- a/ChocolateyExplorer.Website/Index.cshtml
+++ b/ChocolateyExplorer.Website/Index.cshtml
@@ -7,6 +7,7 @@
     <title>Chocolatey Explorer - A GUI to make Chocolatey more awesome</title>
     <link href="//maxcdn.bootstrapcdn.com/bootswatch/3.2.0/paper/bootstrap.min.css" rel="stylesheet" />
     <link href="~/content/style/theme.min.css" rel="stylesheet" />
+    <link href="~/content/chocolatey.ico" rel="shortcut icon" type="image/x-icon" />
 </head>
 <body>
     <div class="site-wrapper">
@@ -40,7 +41,7 @@
                 <div class="mastfoot">
                     <div class="inner">
                         <p>
-                            Cover template for <a href="http://getbootstrap.com">Bootstrap</a>.
+                            Cover template for <a href="http://getbootstrap.com" target="_blank">Bootstrap</a>.
                             Copyright &copy; @DateTime.Now.Year <a href="http://www.jdibble.co.uk" target="_blank">James Dibble</a>.
                             All rights reserved
                         </p>
