--- a/ChocolateyExplorer.Website/Content/Style/theme.css
+++ b/ChocolateyExplorer.Website/Content/Style/theme.css
@@ -34,9 +34,6 @@ body {
 .site-wrapper {
   display: table;
   width: 100%;
-  height: 100%;
-  /* For at least Firefox */
-  min-height: 100%;
   -webkit-box-shadow: inset 0 0 100px rgba(0, 0, 0, 0.5);
   box-shadow: inset 0 0 100px rgba(0, 0, 0, 0.5);
 }
@@ -56,6 +53,10 @@ h1,
 h2,
 h3 {
   color: #ddd;
+}
+.panel-body {
+  color: #444;
+  text-shadow: none;
 }
 /*
  * Header
@@ -122,15 +123,6 @@ h3 {
  * Affix and center
  */
 @media (min-width: 768px) {
-  /* Pull out the header and footer */
-  .masthead {
-    position: fixed;
-    top: 0;
-  }
-  .mastfoot {
-    position: fixed;
-    bottom: 0;
-  }
   /* Start the vertical centering */
   .site-wrapper-inner {
     vertical-align: middle;
