--- a/ChocolateyExplorer.Website/Content/Style/theme.less
+++ b/ChocolateyExplorer.Website/Content/Style/theme.less
@@ -39,8 +39,8 @@ body {
 .site-wrapper {
   display: table;
   width: 100%;
-  height: 100%; /* For at least Firefox */
-  min-height: 100%;
+  //height: 100%; /* For at least Firefox */
+  //min-height: 100%;
   -webkit-box-shadow: inset 0 0 100px rgba(0,0,0,.5);
           box-shadow: inset 0 0 100px rgba(0,0,0,.5);
 }
@@ -60,6 +60,11 @@ body {
 
 h1, h2, h3{
     color: #ddd;
+}
+
+.panel-body{
+    color: #444;
+    text-shadow: none;
 }
 
 
@@ -137,15 +142,6 @@ h1, h2, h3{
  */
 
 @media (min-width: 768px) {
-  /* Pull out the header and footer */
-  .masthead {
-    position: fixed;
-    top: 0;
-  }
-  .mastfoot {
-    position: fixed;
-    bottom: 0;
-  }
   /* Start the vertical centering */
   .site-wrapper-inner {
     vertical-align: middle;
