Fix mobile layout errors

--- a/ChocolateyExplorer.Website/Index.cshtml
+++ b/ChocolateyExplorer.Website/Index.cshtml
@@ -38,41 +38,43 @@
                             <a href="https://github.com/james-dibble/ChocolateyExplorer" target="_blank">Fork Chocolatey Explorer on GitHub.</a>
                         </p>
                     </div>
-                    <div class="row" id="features">
-                        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                            <div class="page-header">
-                                <h2>Features</h2>
-                            </div>
-                        </div>
-                        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-                            <div class="panel panel-primary">
-                                <div class="panel-heading">Install</div>
-                                <div class="panel-body">
-                                    Install your favorite packages with an exact version, even prerelease one.
+                    <div class="container-fluid">
+                        <div class="row" id="features">
+                            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                                <div class="page-header">
+                                    <h2>Features</h2>
                                 </div>
                             </div>
-                        </div>
-                        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-                            <div class="panel panel-primary">
-                                <div class="panel-heading">Update or Uninstall</div>
-                                <div class="panel-body">
-                                    View the packages you currently have installed and update or remove them.
+                            <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+                                <div class="panel panel-primary">
+                                    <div class="panel-heading">Install</div>
+                                    <div class="panel-body">
+                                        Install your favorite packages with an exact version, even prerelease one.
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-                            <div class="panel panel-primary">
-                                <div class="panel-heading">Sources</div>
-                                <div class="panel-body">
-                                    Add a custom Chocolatey source that is exposed via OData including Nuget based feeds.
+                            <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+                                <div class="panel panel-primary">
+                                    <div class="panel-heading">Update or Uninstall</div>
+                                    <div class="panel-body">
+                                        View the packages you currently have installed and update or remove them.
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-                            <div class="panel panel-primary">
-                                <div class="panel-heading">Search</div>
-                                <div class="panel-body">
-                                    Search for a particular package to install from a particular source or list all available packages.
+                            <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+                                <div class="panel panel-primary">
+                                    <div class="panel-heading">Sources</div>
+                                    <div class="panel-body">
+                                        Add a custom Chocolatey source that is exposed via OData including Nuget based feeds.
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+                                <div class="panel panel-primary">
+                                    <div class="panel-heading">Search</div>
+                                    <div class="panel-body">
+                                        Search for a particular package to install from a particular source or list all available packages.
+                                    </div>
                                 </div>
                             </div>
                         </div>
